--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -27,12 +27,12 @@
         </nav>
 
         {{!-- <button class="burger-btn" type="button">
-            {{!-- <svg class="burger-icon">
+            <svg class="burger-icon">
                 <use href="./images/sprite.svg#burger-icon"></use>
-            </svg> --}}
-        </button> --}}
+            </svg>
+        </button>
 
-        {{!-- <button type="button" class="button modal-btn">
+        <button type="button" class="button modal-btn">
             <svg class="icon-arrow" width="7" height="10">
                 <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
