--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -6,7 +6,7 @@
             </a>
             <ul class="nav-list list">
                 <li class="nav-item item">
-                    <a href="#" class="link current">Галерея</a>
+                    <a href="#" class="link current-link">Галерея</a>
                 </li>
                 <li class="nav-item item">
                     <a href="#" class="link">Весілля</a>
