--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <nav class="main-nav">
-            <a class="logo" href="./index.html">Місце для логотипу
+            <a class="logo link" href="./index.html">TURIANSKYI STUDIO
             <p class="slogan">Keep your memories</p>
             </a>
             <ul class="nav-list list">
