добавляет последний елемент к шаблону галереи

--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,9 +1,14 @@
 <section class="gallery" id="gallery">
     <ul class="gallery-list list">
-        {{#each items}}
+        {{#each this}}
         <li class="gallery-item item">
-            <img src="#" alt="">
+            <div class="thumb">
+                <img class="item-img" src={{src}} alt={{id}}>
+            </div>
         </li>
         {{/each}}
+        <li class="gallery-item item last-item">
+            <a class="link more-btn" href="https://turianskyi.pixellu.gallery/my-gallery-854482/all"></a>
+        </li>
     </ul>
 </section>
